# CaptureKeyUtility

./: .gitignore  .gitmodules  README.md
.github/workflows/: cmake-single-platform.yml
CaptureKeyUtility/: CMakeLists.txt  CaptureKeyUtilityConfig.yaml  main.cpp
